Настроены кнопки добавить, события при открытии и закрытии формы

--- a/CommApp/CommApp.csproj
+++ b/CommApp/CommApp.csproj
@@ -54,6 +54,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConnectionData.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -68,6 +69,7 @@
     <Compile Include="ServerForm.Designer.cs">
       <DependentUpon>ServerForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="StringForWrite.cs" />
     <Compile Include="WarningForm.cs">
       <SubType>Form</SubType>
     </Compile>
