--- a/CommApp/CommApp.csproj
+++ b/CommApp/CommApp.csproj
@@ -145,6 +145,24 @@
   <ItemGroup>
     <None Include="Resources\arroyUp_24x24.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\refresh_32x32.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\moveup_32x32.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\movedown_32x32.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\gridcolumnheader_32x32.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\next_32x32.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\clear_32x32.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
